--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "api whatsapp construccion",
   "dependencies": {
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
@@ -20,5 +21,13 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alejaksoto/api_whatsapp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/alejaksoto/api_whatsapp/issues"
+  },
+  "homepage": "https://github.com/alejaksoto/api_whatsapp#readme"
 }
